Revert "refactor: add roadrunner files, make drive dirs robot-specific"
This reverts commit d5ec3f5b6a8fd00a6528a10152671580290380ce and undos
a lot of dumb decisions I made.